--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,60 @@
+body {
+    margin: 0;
+    background-color: #ffd8d8;
+    font-family: 'Open Sans', sans-serif;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 12px;
+}
+
+.search-form {
+    margin-bottom: 20px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+}
+
+input[type="text"] {
+    background-color: #ff7575;
+    color: #fff;
+    border: 0;
+    border-radius: 8px;
+    width: 25%;
+    height: 48px;
+    font-size: 40px;
+    line-height: 1;
+    margin-right: 10px;
+    padding-left: 15px;
+}
+
+input[type="text"]::placeholder {
+    color: #e16868;
+}
+
+button {
+    font-size: 24px;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    border-color: #ff7575;
+}
+
 .photo-card {
     flex-basis: calc((100% - 60px) / 4);
+    border-radius: 8px;
+    box-shadow: 0.8px 1.6px 4.8px -0.48px rgba(0, 0, 0, 0.45);
+    background-color: #fff;
+}
+
+.photo-card a {
+    text-decoration: none;
+    color: #e16868;
+}
+
+.photo-card .info {
+    padding-left: 5%;
+    padding-bottom: 5%;
+    padding-top: auto
 }
 
 .gallery {
@@ -9,6 +64,7 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    padding-bottom: 10px;
 }
 
 img {
